# adapterremoval

./: .clang-format  .clang-format-ignore  .clang-tidy  .codespellrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AdapterRemoval.1  AdapterRemoval.cc  AdapterRemoval.pod  CHANGES.md  Containerfile  Makefile  README  README-v3.md  README.md  gcovr.cfg  index.html  meson.build  meson.options  meson_options.txt  pyproject.toml  schema.json
docs/: README.rst  conf.py  detailed_overview.rst  examples.rst  getting_started.rst  index.rst  input_and_output.rst  installation.rst  manpage.rst  meson.build  migrating.rst  misc.rst  requirements-rtd.txt
examples/: 3.0.0-alpha3.html  3.0.0-alpha3.json  3.x.html  3.x.json  Makefile  adapters.txt  barcodes.txt  demux_1.fq  demux_2.fq  example.html  example.json  interleaved.fq  meson.build  mixed_1.fq  mixed_2.fq  reads_1.fastq  reads_2.fq  reads_q64.fq
src/: adapter_database.cpp  adapter_database.hpp  adapter_detect.cpp  adapter_detect.hpp  adapter_detector.cpp  adapter_detector.hpp  adapter_id.cpp  adapter_id.hpp  adapter_select.cpp  adapter_select.hpp  adapter_selector.cpp  adapter_selector.hpp  adapters.cpp  adapters.hpp  adapterset.cc  adapterset.cpp  adapterset.h  adapterset.hpp  alignment.cc  alignment.cpp  alignment.h  alignment.hpp  alignment_avx2.cpp  alignment_common.hpp  alignment_sse2.cpp  alignment_tables.cpp  alignment_tables.hpp  argparse.cc  argparse.cpp  argparse.h  argparse.hpp  barcode_table.cpp  barcode_table.hpp  benchmarking.cpp  benchmarking.hpp  buffer.hpp  commontypes.h  commontypes.hpp  counts.hpp  debug.cc  (+133 more)
tests/regression/: README  meson.build  run
tests/regression/bugfixes/: info_barcodes_file_not_found.json  test_barcodes_file_not_found.json
tests/regression/bugfixes/valid_overlap_not_selected/: input_1.fastq  input_2.fastq  test.json  your_output.merged.fastq
tests/regression/deprecated_features/collapse/: test.json
tests/regression/deprecated_features/collapse_truncated/: test.json  your_output.json
tests/regression/deprecated_features/merge_deterministic/: test.json  your_output.json  your_output.merged.fastq
tests/regression/filtering/maxns/: out_max_10.fastq  out_max_1pct.fastq  out_max_5.fastq  out_max_5.json  out_max_5pct.fastq  out_max_5pct.json  test_max_1.json  test_max_10.json  test_max_1pct.json  test_max_2.json  test_max_2pct.json  test_max_5.json  test_max_5_deprecated_alias.json  test_max_5pct.json  test_max_7pct.json  test_max_both.json
tests/regression/merging/additive/: test.json  test_default.json  test_deprecated_alias.json  test_max_quality_20.json  test_max_quality_64.json  test_max_quality_alias.json  your_output.default.json  your_output.json  your_output.max20.json  your_output.max20.merged.fastq  your_output.max64.json  your_output.max64.merged.fastq
tests/regression/merging/maximum/: input_1.fastq  test_deprecated_alias_1.json  test_deprecated_alias_2.json  test_explicit.json  test_implicit.json  test_max_quality_20.json  test_max_quality_64.json  your_output.discarded.fastq  your_output.json
tests/regression/misc/adapter_list/: adapters.txt  info.json
tests/regression/misc/adapter_selection/: input_1.fastq  input_2.fastq  output_auto_pe.json  output_auto_se.json  output_undefined_pe.json  output_undefined_se.json  output_unknown_pe.json  output_unknown_se.json  test_auto_pe.json  test_auto_se.json  test_auto_with_undefined_pe.json  test_auto_with_unknown_se.json  test_undefined_pe.json  test_undefined_pe_explicit.json  test_undefined_se_explicit.json  test_unknown_pe_explicit.json  test_unknown_se_explicit.json
tests/regression/misc/bad_args/: info_basename_is_directory.json  info_basename_is_empty.json  info_fewer_file1.json  info_fewer_file2.json  info_negative_window.json  info_se_interleaved.json  input_2a.fastq  test_basename_is_directory.json  test_basename_is_empty.json  test_demux_without_barcodes.json  test_fewer_file1.json  test_fewer_file2.json  test_file2_only.json  test_ident_and_demux.json  test_negative_window_1.json  test_negative_window_2.json  test_nothing_enabled_perbase.json  test_se_interleaved.json  test_se_interleaved_input.json
tests/regression/misc/compression_levels/: test_0.json  test_1.json  test_12.json  test_13.json  test_2.json  test_defaults.json
tests/regression/misc/crlf_newlines/: test.json  your_output.json
tests/regression/misc/duplication/: input_1.fastq  input_2.fastq  output_pe.json  output_se.json  test_pe.json  test_se.json
tests/regression/misc/gzip_by_extension/: test_defaults.json  your_output.r2.fastq
tests/regression/misc/head/: head_0_pe.json  head_0_se.json  head_2_pe.json  head_2_se.json  head_3_pe.json  head_3_se.json  input_1.fastq  input_2.fastq  test_0_pe.json  test_0_se.json  test_2_pe.json  test_2_se.json  test_defaults_pe.json  test_defaults_se.json
tests/regression/misc/identify_adapters/: info.json  test.json  test_deprecated.json  your_output.json
tests/regression/misc/merging/: input_1.fastq  input_2.fastq  test.json  test_deprecated_alias.json  your_output.json  your_output.r2.fastq
tests/regression/misc/no_arguments/: info.json  test.json
tests/regression/misc/poly-x-tails/: input_1.fastq  input_1_named.fastq  input_2.fastq  input_2_named.fastq  out_all.pe.json  out_all.r1.fastq  (+28 more)
tests/unit/: adapter_database_test.cpp  adapter_detector_test.cpp  adapter_selector_test.cpp  alignment_test.cpp  argparse_test.cpp  barcodes_test.cpp  buffer_test.cpp  catch.hpp  counts_test.cpp  debug_test.cpp  errors_test.cpp  fastq_enc_test.cpp  fastq_test.cpp  joined_linereader_test.cpp  json_test.cpp  linereader_test.cpp  logging_test.cpp  main_test.cpp  mathutils_test.cpp  meson.build  read_group_test.cpp  scheduler_test.cpp  sequence_sets_test.cpp  sequence_test.cpp  serializer_test.cpp  strutils_test.cpp  table_reader_test.cpp  testing.cpp  testing.hpp  testing_test.cpp  threading_test.cpp  timeutils_test.cpp  trimming_test.cpp  utilities_test.cpp
tests/unit/sequence_sets/: adapter_set_test.cpp  common_test.cpp  sample_set_test.cpp  sample_test.cpp
(+1734 files in other folders)
