# SPDX-License-Identifier: GPL-3.0-or-later
# SPDX-FileCopyrightText: 2024 Mikkel Schubert <mikkelsch@gmail.com>

option(
    'static',
    type: 'boolean',
    value: false,
    description: 'Build static executable',
)
option(
    'harden',
    type: 'boolean',
    value: false,
    description: 'Build executable with hardening flags',
)