# SPDX-License-Identifier: GPL-3.0-or-later
# SPDX-FileCopyrightText: 2024 Mikkel Schubert <mikkelsch@gmail.com>

option(
    'static',
    type: 'boolean',
    value: false,
    description: 'Build static executable',
)
option(
    'mimalloc',
    type: 'feature',
    value: 'disabled',
    description: 'Require and link to mimalloc library',
)
option(
    'harden',
    type: 'boolean',
    value: true,
    description: 'Build executable with hardening flags',
)
option(
    'manpage',
    type: 'feature',
    value: 'enabled',
    description: 'Build man page documentation; requires sphinx-build to be available',
)
option(
    'docs',
    type: 'feature',
    value: 'disabled',
    description: 'Build HTML documentation; requires sphinx-build to be available',
)
option(
    'uv',
    type: 'feature',
    value: 'auto',
    description: 'Use `uv` to install dependencies when running regression tests',
)
