# SPDX-License-Identifier: GPL-3.0-or-later
# SPDX-FileCopyrightText: 2024 Mikkel Schubert <mikkelsch@gmail.com>

install_data(
    'adapters.txt',
    'barcodes.txt',
    'demux_1.fastq',
    'demux_2.fastq',
    'interleaved.fastq',
    'Makefile',
    'mixed_1.fastq',
    'mixed_2.fastq',
    'reads_1.fastq',
    'reads_2.fastq',
    'reads_q64.fastq',
    install_dir: get_option('datadir') / meson.project_name() / 'examples',
)